<resources>
    <string name="app_name" translatable="false">RegisterApp</string>
    <string name="enter_names">Enter Names</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="dob">DOB</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="submit">SUBMIT</string>
</resources>
